--- a/index.html
+++ b/index.html
@@ -37,12 +37,30 @@
 
 
 <div class = 'right-text'>
-<div>Rated 5 Stars in Reviews</div>
-<div> Rated 5 Stars in Report Guru</div>
-<div> Rated 5 Stars in BestTech</div>
+<div class="rate1">
+  <img src = "./images/icon-star.svg"/>
+  Rated 5 Stars in Reviews</div>
+<div class="rate1"> Rated 5 Stars in Report Guru</div>
+<div class="rate1"> Rated 5 Stars in BestTech</div>
 </div>
 
       </div>
+
+<div class="card-wrapper">
+  <div class="one">
+  <div >
+    <img src="./images/image-anne.jpg">
+    <h5> Colton Smith</h5>
+    <h6> Verified Buyer</h6>
+    <p>"We needed the same printed design as the one we had ordered a week prior.
+      Not only did they find the original order, but we also received it in time.
+      Excellent!"</p>
+  <div>
+
+  </div>
+
+</div>
+
 
 
     </main>
