--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
 
     <main class = "container">
-      <div class = 'wrapper'>
+      <div class = 'wrapper flex'>
         <div class = 'left-text'>
           <h1 class="heading">10,000+ of our  users love our products.</h1>
           <p class="para1">We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services.</p>
@@ -46,7 +46,7 @@
 
       </div>
 
-<div class="card-wrapper">
+<!-- <div class="card-wrapper">
   <div class="one">
   <div >
     <img src="./images/image-anne.jpg">
@@ -59,6 +59,46 @@
 
   </div>
 
+</div> -->
+<div class="profile-flex flex">
+  <div class="profile">
+    <div class="profile-info flex">
+      <div class=profile-img>
+        <img src="/images/image-anne.jpg">
+      </div>
+      <div class='profile-text'>
+        <h6>Aliza Webber</h6>
+        <p>Interior designer</p>
+      </div>
+    </div>
+    <h5>Designed in 2020 by Aliza Webber</h5>
+  </div>
+
+  <div class="profile">
+    <div class="profile-info flex">
+      <div class=profile-img>
+        <img src="/images/image-anne.jpg">
+      </div>
+      <div class='profile-text'>
+        <h6>Aliza Webber</h6>
+        <p>Interior designer</p>
+      </div>
+    </div>
+    <h5>Designed in 2020 by Aliza Webber</h5>
+  </div>
+
+  <div class="profile">
+    <div class="profile-info flex">
+      <div class=profile-img>
+        <img src="/images/image-anne.jpg">
+      </div>
+      <div class='profile-text'>
+        <h6>Aliza Webber</h6>
+        <p>Interior designer</p>
+      </div>
+    </div>
+    <h5>Designed in 2020 by Aliza Webber</h5>
+  </div>
 </div>
 
 
