--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     <main class = "container">
       <div class = 'wrapper flex'>
+        <!-- <div class="xxxx flex"> -->
         <div class = 'left-text'>
           <h1 class="heading">10,000+ of our  users love our products.</h1>
           <p class="para1">We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services.</p>
@@ -43,7 +44,7 @@
 <div class="rate1"> Rated 5 Stars in Report Guru</div>
 <div class="rate1"> Rated 5 Stars in BestTech</div>
 </div>
-
+</div>
       </div>
 
 <!-- <div class="card-wrapper">
@@ -61,48 +62,54 @@
 
 </div> -->
 <div class="profile-flex flex">
-  <div class="profile">
+  <div class="profile1">
     <div class="profile-info flex">
       <div class=profile-img>
-        <img src="/images/image-anne.jpg">
+        <img src="/images/image-colton.jpg">
       </div>
       <div class='profile-text'>
-        <h6>Aliza Webber</h6>
-        <p>Interior designer</p>
+        <h5> Colton Smith 
+          </h5>
+        <p>Verified Buyer</p>
       </div>
     </div>
-    <h5>Designed in 2020 by Aliza Webber</h5>
+     <p class ='tag'>"We needed the same printed design as the one we had ordered a week prior.
+      Not only did they find the original order, but we also received it in time.
+      Excellent!"</p>
   </div>
 
-  <div class="profile">
+  <div class="profile2">
     <div class="profile-info flex">
       <div class=profile-img>
-        <img src="/images/image-anne.jpg">
+        <img src="/images/image-irene.jpg">
       </div>
       <div class='profile-text'>
-        <h6>Aliza Webber</h6>
-        <p>Interior designer</p>
+        <h5> Irene Roberts r</h5>
+        <p>Verified Buyer</p>
       </div>
     </div>
-    <h5>Designed in 2020 by Aliza Webber</h5>
+    <p class ='tag'> "Customer service is always excellent and very quick turn around. Completely
+      delighted with the simplicity of the purchase and the speed of delivery."</p>
   </div>
 
-  <div class="profile">
+  <div class="profile3">
     <div class="profile-info flex">
       <div class=profile-img>
         <img src="/images/image-anne.jpg">
       </div>
       <div class='profile-text'>
-        <h6>Aliza Webber</h6>
-        <p>Interior designer</p>
+        <h5> Anne Wallace 
+         </h5>
+        <p> Verified Buyer</p>
       </div>
     </div>
-    <h5>Designed in 2020 by Aliza Webber</h5>
+    <p class ='tag'>"Put an order with this company and can only praise them for the very high
+      standard. Will definitely use them again and recommend them to everyone!"</p>
   </div>
 </div>
 
 
-
+      </div>
     </main>
 
     
