--- a/index.html
+++ b/index.html
@@ -40,9 +40,25 @@
 <div class = 'right-text'>
 <div class="rate1">
   <img src = "./images/icon-star.svg"/>
+  <img src = "./images/icon-star.svg"/>
+  <img src = "./images/icon-star.svg"/>
+  <img src = "./images/icon-star.svg"/>
+  <img src = "./images/icon-star.svg"/>
   Rated 5 Stars in Reviews</div>
-<div class="rate1"> Rated 5 Stars in Report Guru</div>
-<div class="rate1"> Rated 5 Stars in BestTech</div>
+<div class="rate2">
+  <img src = "./images/icon-star.svg"/>
+  <img src = "./images/icon-star.svg"/>
+  <img src = "./images/icon-star.svg"/>
+  <img src = "./images/icon-star.svg"/>
+  <img src = "./images/icon-star.svg"/>
+   Rated 5 Stars in Report Guru</div>
+<div class="rate3">
+  <img src = "./images/icon-star.svg"/>
+  <img src = "./images/icon-star.svg"/>
+  <img src = "./images/icon-star.svg"/>
+  <img src = "./images/icon-star.svg"/>
+  <img src = "./images/icon-star.svg"/>
+   Rated 5 Stars in BestTech</div>
 </div>
 </div>
       </div>
@@ -68,9 +84,9 @@
         <img src="/images/image-colton.jpg">
       </div>
       <div class='profile-text'>
-        <h5> Colton Smith 
+        <h4> Colton Smith 
           </h5>
-        <p>Verified Buyer</p>
+        <h5>Verified Buyer</h5>
       </div>
     </div>
      <p class ='tag'>"We needed the same printed design as the one we had ordered a week prior.
@@ -84,8 +100,8 @@
         <img src="/images/image-irene.jpg">
       </div>
       <div class='profile-text'>
-        <h5> Irene Roberts r</h5>
-        <p>Verified Buyer</p>
+        <h4> Irene Roberts </h4>
+        <h5>Verified Buyer</h5>
       </div>
     </div>
     <p class ='tag'> "Customer service is always excellent and very quick turn around. Completely
@@ -98,9 +114,9 @@
         <img src="/images/image-anne.jpg">
       </div>
       <div class='profile-text'>
-        <h5> Anne Wallace 
-         </h5>
-        <p> Verified Buyer</p>
+        <h4> Anne Wallace 
+         </h4>
+        <h5> Verified Buyer</h5>
       </div>
     </div>
     <p class ='tag'>"Put an order with this company and can only praise them for the very high
