--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
 
     <main class = "container">
-      <div class = 'wrapper flex'>
+      <div class = 'wrapper flex flex-sm'>
         <!-- <div class="xxxx flex"> -->
         <div class = 'left-text'>
           <h1 class="heading">10,000+ of our  users love our products.</h1>
@@ -38,27 +38,39 @@
 
 
 <div class = 'right-text'>
-<div class="rate1">
+<div class="rate1 flex  flex-sm">
+  <div>
   <img src = "./images/icon-star.svg"/>
   <img src = "./images/icon-star.svg"/>
   <img src = "./images/icon-star.svg"/>
   <img src = "./images/icon-star.svg"/>
   <img src = "./images/icon-star.svg"/>
-  Rated 5 Stars in Reviews</div>
-<div class="rate2">
+</div>
+<p class='rate-p'>  Rated 5 Stars in Reviews</p>
+ </div>
+<div class="rate2 flex flex-sm">
+  <div>
   <img src = "./images/icon-star.svg"/>
   <img src = "./images/icon-star.svg"/>
   <img src = "./images/icon-star.svg"/>
   <img src = "./images/icon-star.svg"/>
   <img src = "./images/icon-star.svg"/>
-   Rated 5 Stars in Report Guru</div>
-<div class="rate3">
+</div>
+   <p class="rate-p">Rated 5 Stars in Report Guru
+   </p>
+   </div>
+<div class="rate3 flex flex-sm">
+  <div >
   <img src = "./images/icon-star.svg"/>
   <img src = "./images/icon-star.svg"/>
   <img src = "./images/icon-star.svg"/>
   <img src = "./images/icon-star.svg"/>
   <img src = "./images/icon-star.svg"/>
-   Rated 5 Stars in BestTech</div>
+</div>
+<p class='rate-p'>
+   Rated 5 Stars in BestTech
+</p>
+</div>
 </div>
 </div>
       </div>
