--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
 <div class = 'right-text'>
-<div class="rate1 flex  flex-sm">
+<div class="rate1 flex flex-sm">
   <div>
   <img src = "./images/icon-star.svg"/>
   <img src = "./images/icon-star.svg"/>
@@ -89,7 +89,7 @@
   </div>
 
 </div> -->
-<div class="profile-flex flex">
+<div class="profile-flex flex flex-sm">
   <div class="profile1">
     <div class="profile-info flex">
       <div class=profile-img>
