--- a/index.html
+++ b/index.html
@@ -1,133 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
-    <!-- <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png" -->
-    />
-   <link rel ="stylesheet" href="/style.css"/>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/style.css" />
 
-    <title> Social proof section</title>
+  <title> Social proof section</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    
-  </head>
-  <body>
+</head>
 
-    <main class = "container">
-      <div class = 'wrapper flex flex-sm'>
-        <!-- <div class="xxxx flex"> -->
-        <div class = 'left-text'>
-          <h1 class="heading">10,000+ of our  users love our products.</h1>
-          <p class="para1">We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services.</p>
+<body>
+
+  <main class="container">
+    <div class='wrapper flex flex-sm'>
+      <div class='left-text'>
+        <h1 class="heading">10,000+ of our users love our products.</h1>
+        <p class="para1">We only provide great products combined with excellent customer service. See what our satisfied
+          customers are saying about our services.</p>
+      </div>
+
+
+      <div class='right-text'>
+        <div class="rate1 flex flex-sm">
+          <div>
+            <img src="./images/icon-star.svg" />
+            <img src="./images/icon-star.svg" />
+            <img src="./images/icon-star.svg" />
+            <img src="./images/icon-star.svg" />
+            <img src="./images/icon-star.svg" />
+          </div>
+          <p class='rate-p'> Rated 5 Stars in Reviews</p>
         </div>
+        <div class="rate2 flex flex-sm">
+          <div>
+            <img src="./images/icon-star.svg" />
+            <img src="./images/icon-star.svg" />
+            <img src="./images/icon-star.svg" />
+            <img src="./images/icon-star.svg" />
+            <img src="./images/icon-star.svg" />
+          </div>
+          <p class="rate-p">Rated 5 Stars in Report Guru
+          </p>
+        </div>
+        <div class="rate3 flex flex-sm">
+          <div>
+            <img src="./images/icon-star.svg" />
+            <img src="./images/icon-star.svg" />
+            <img src="./images/icon-star.svg" />
+            <img src="./images/icon-star.svg" />
+            <img src="./images/icon-star.svg" />
+          </div>
+          <p class='rate-p'>
+            Rated 5 Stars in BestTech
+          </p>
+        </div>
+      </div>
+    <!-- </div> -->
+    <!-- </div> -->
 
 
-<div class = 'right-text'>
-<div class="rate1 flex flex-sm">
-  <div>
-  <img src = "./images/icon-star.svg"/>
-  <img src = "./images/icon-star.svg"/>
-  <img src = "./images/icon-star.svg"/>
-  <img src = "./images/icon-star.svg"/>
-  <img src = "./images/icon-star.svg"/>
-</div>
-<p class='rate-p'>  Rated 5 Stars in Reviews</p>
- </div>
-<div class="rate2 flex flex-sm">
-  <div>
-  <img src = "./images/icon-star.svg"/>
-  <img src = "./images/icon-star.svg"/>
-  <img src = "./images/icon-star.svg"/>
-  <img src = "./images/icon-star.svg"/>
-  <img src = "./images/icon-star.svg"/>
-</div>
-   <p class="rate-p">Rated 5 Stars in Report Guru
-   </p>
-   </div>
-<div class="rate3 flex flex-sm">
-  <div >
-  <img src = "./images/icon-star.svg"/>
-  <img src = "./images/icon-star.svg"/>
-  <img src = "./images/icon-star.svg"/>
-  <img src = "./images/icon-star.svg"/>
-  <img src = "./images/icon-star.svg"/>
-</div>
-<p class='rate-p'>
-   Rated 5 Stars in BestTech
-</p>
-</div>
-</div>
-</div>
+    <div class="profile-flex flex flex-sm">
+      <div class="profile1">
+        <div class="profile-info flex">
+          <div class=profile-img>
+            <img src="/images/image-colton.jpg">
+          </div>
+          <div class='profile-text'>
+            <h4> Colton Smith
+              </h5>
+              <h5>Verified Buyer</h5>
+          </div>
+        </div>
+        <p class='tag'>"We needed the same printed design as the one we had ordered a week prior.
+          Not only did they find the original order, but we also received it in time.
+          Excellent!"</p>
+      </div>
+
+      <div class="profile2">
+        <div class="profile-info flex">
+          <div class=profile-img>
+            <img src="/images/image-irene.jpg">
+          </div>
+          <div class='profile-text'>
+            <h4> Irene Roberts </h4>
+            <h5>Verified Buyer</h5>
+          </div>
+        </div>
+        <p class='tag'> "Customer service is always excellent and very quick turn around. Completely
+          delighted with the simplicity of the purchase and the speed of delivery."</p>
+      </div>
+
+      <div class="profile3">
+        <div class="profile-info flex">
+          <div class=profile-img>
+            <img src="/images/image-anne.jpg">
+          </div>
+          <div class='profile-text'>
+            <h4> Anne Wallace
+            </h4>
+            <h5> Verified Buyer</h5>
+          </div>
+        </div>
+        <p class='tag'>"Put an order with this company and can only praise them for the very high
+          standard. Will definitely use them again and recommend them to everyone!"</p>
       </div>
 
 
-<div class="profile-flex flex flex-sm">
-  <div class="profile1">
-    <div class="profile-info flex">
-      <div class=profile-img>
-        <img src="/images/image-colton.jpg">
-      </div>
-      <div class='profile-text'>
-        <h4> Colton Smith 
-          </h5>
-        <h5>Verified Buyer</h5>
-      </div>
     </div>
-     <p class ='tag'>"We needed the same printed design as the one we had ordered a week prior.
-      Not only did they find the original order, but we also received it in time.
-      Excellent!"</p>
+
+
+    </div>
+  </main>
+
+
+
+  <div class="attribution">
+    Challenge by
+    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
+      href="#">Xommy</a>.
   </div>
+</body>
 
-  <div class="profile2">
-    <div class="profile-info flex">
-      <div class=profile-img>
-        <img src="/images/image-irene.jpg">
-      </div>
-      <div class='profile-text'>
-        <h4> Irene Roberts </h4>
-        <h5>Verified Buyer</h5>
-      </div>
-    </div>
-    <p class ='tag'> "Customer service is always excellent and very quick turn around. Completely
-      delighted with the simplicity of the purchase and the speed of delivery."</p>
-  </div>
-
-  <div class="profile3">
-    <div class="profile-info flex">
-      <div class=profile-img>
-        <img src="/images/image-anne.jpg">
-      </div>
-      <div class='profile-text'>
-        <h4> Anne Wallace 
-         </h4>
-        <h5> Verified Buyer</h5>
-      </div>
-    </div>
-    <p class ='tag'>"Put an order with this company and can only praise them for the very high
-      standard. Will definitely use them again and recommend them to everyone!"</p>
-  </div>
-
-  
-</div>
-
-
-      </div>
-    </main>
-
-    
-   
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Xommy</a>.
-    </div>
-  </body>
 </html>
