--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
           </p>
         </div>
       </div>
-    <!-- </div> -->
-    <!-- </div> -->
+    </div>
+    </div>
 
 
     <div class="profile-flex flex flex-sm">
